--- a/Paper/Supplements_Review.tex
+++ b/Paper/Supplements_Review.tex
@@ -116,7 +116,7 @@
 \begin{figure}
 \centering
 \includegraphics{ATE_Revisions_files/figure-latex/figR1_error_ests_norm-1.pdf}
-\caption{\label{fig:figR1_error_ests} Power analysis parameter estimates}
+\caption{\label{fig:figSR1_error_ests_norm} Power analysis parameter estimates}
 \end{figure}
 
 
@@ -158,13 +158,13 @@ Different sampling times after 800 generations of gene flow.}
 \begin{figure}
 \centering
 \includegraphics[width=8cm,height=16cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult_3_supplements-1.pdf}
-\caption{\label{fig:figS2_1} GLM effect size estimates and 95\% C.I. for the parameters: gene flow model (simple/extended), recombination rate (constant/varying), demography (simple/complex), minimal genetic distance (0.02/0.05 cM), SNPs used for ALD calculation (100 \% / 5 \%), ascertainment scheme (LES/HES) and additionally the interaction between ascertainment scheme and SNPs used for ALD calculation, on the standardized difference between simulated and estimated admixture time. Estimates are calculated across all possible combinations of parameters and are given as the estimate of the standard model plus the respective parameter estimate. Dotted horizontal line indicates unbiased admixture estimates.}
+\caption{\label{fig:figSGLM2} GLM effect size estimates and 95\% C.I. for the parameters: gene flow model (simple/extended), recombination rate (constant/varying), demography (simple/complex), minimal genetic distance (0.02/0.05 cM), SNPs used for ALD calculation (100 \% / 5 \%), ascertainment scheme (LES/HES) and additionally the interaction between ascertainment scheme and SNPs used for ALD calculation, on the standardized difference between simulated and estimated admixture time. Estimates are calculated across all possible combinations of parameters and are given as the estimate of the standard model plus the respective parameter estimate. Dotted horizontal line indicates unbiased admixture estimates.}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figS2_updated-1.pdf}
-\caption{\label{fig:figS2_2} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
+\caption{\label{fig:figSGLM_data} Comparison of the standardized difference between true and estimated admixture time for simulations of all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable, SNP used 100 \% / 5 \% and the gene flow model = simple/extended. Simulations under the simple pulse are indicated in purple, extended pulse in turquoise. Each simulation was repeated 100 times. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
 
@@ -174,7 +174,7 @@ Different sampling times after 800 generations of gene flow.}
 
 \begin{table}[H]
 
-\caption{\label{tab:tableS1_1}\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
+\caption{\label{tab:tableSGLM1}\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
 \centering
 \begin{tabular}[t]{l|r|r|r|r|r|r}
 \hline
@@ -201,7 +201,7 @@ sigma & 0.91 & 0.01 & 0.90 & 0.93 & 5418.41 & 1\\
 
 \begin{table}[H]
 
-\caption{\label{tab:tableS1_2}\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
+\caption{\label{tab:tableSGLM2}\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.}
 \centering
 \begin{tabular}[t]{l|r|r|r|r|r|r}
 \hline
@@ -229,7 +229,7 @@ sigma & 0.91 & 0.01 & 0.90 & 0.93 & 3894.49 & 1\\
 \end{table}
 
 \begin{table}[H]
-\caption{\label{tab:tableS2} Mean and 2.5/97.5 compatibility interval for every parameter estimated in the model fit to ALD from the 1k Genome data.}
+\caption{\label{tab:tableSReal_data_est} Mean and 2.5/97.5 compatibility interval for every parameter estimated in the model fit to ALD from the 1k Genome data.}
 \centering
 \begin{tabular}[t]{l|l|l|l|l}
 \hline
@@ -260,7 +260,7 @@ Extended Pulse (td=2500) & 0.018 (0.018 - 0.018) & 2129 (2055 - 2208) & -1e-06 (
 
 \begin{table}[H]
 
-\caption{\label{tab:tableS2_2}\label{tab:tableS2} AIC and RSS for the fit  to ALD from the 1k Genome data.}
+\caption{\label{tab:tableSReadl_data_AIC_F_Test} AIC and RSS for the fit  to ALD from the 1k Genome data.}
 \centering
 \begin{tabular}[t]{l|r|r}
 \hline
