--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -462,36 +462,26 @@ Throughout, we simulation 3 \% Neandertal admixture into non-Africans using a de
 
 When comparing the results of the model comparison (FIG), we find that the results for the ``true'' (simulated) segments match closely the idealized case. In contrast, we find that for inferred segments, results greatly depend on the recombination rate used. For a constant recombination rate, results are similar, but for the hapmap-recombination map, we do not have any power to distinguish these scenarios. 
 
-DO SOMETHING FOR ALD
+%DO SOMETHING FOR ALD
 
-Next, we investigate how well we can infer parameters. In panel A of Figure \ref{fig:fig3_1}, we simulate under a simple pulse ($t_d=1$) and extended pulse models, and infer parameters under either model. In general, we find that the mean admixture times are reasonably accurately estimated in most scenarios, the exception being the inferred segments when using the variable (hapmap) recombination map. The admixture duration is much more poorly estimated, and in most cases has very wide confidence intervals. For intermediate admixture durations of 1,000-1,500 generations the durations are well-estimated, but we observe a slight underestimate for migration events longer than that.
+Next, we investigate how well we can infer parameters. In panel A of Figure \ref{fig:figResult2}, we simulate under a simple pulse ($t_d=1$) and extended pulse models, and infer parameters under either model. In general, we find that the mean admixture times are reasonably accurately estimated in most scenarios, the exception being the inferred segments when using the variable (hapmap) recombination map. The admixture duration is much more poorly estimated, and in most cases has very wide confidence intervals. For intermediate admixture durations of 1,000-1,500 generations the durations are well-estimated, but we observe a slight underestimate for migration events longer than that.
  
 
 We detect a slight, but consistent underestimate of the mean admixture times, which is stronger for longer admixture durations. For the segments, this underestimate is likely due to the slight downward bias caused by recombination and coalescence between admixed segments \cite{liang_lengths_2014}. 
 
-Uncertainties in the recombination map have a pronounced downward bias when estimating $t_m$ for both models (Supplement Figure \ref{fig:figResult2_1_Supplements} and \ref{fig:figResult2_3_Supplements}). However, we find that the extended pulse model results in good estimates for $t_m$ when inferred using a constant recombination rate. A likely explanation for this is that unaccounted variation in recombination rate gets confounded with variation in admixture time (Supplement Figure \ref{fig:figResult2_2_Supplements}).
+Uncertainties in the recombination map have a pronounced downward bias when estimating $t_m$ for both models. However, we find that the extended pulse model results in good estimates for $t_m$ when inferred using a constant recombination rate. A likely explanation for this is that unaccounted variation in recombination rate gets confounded with variation in admixture time (Supplement Figure \ref{fig:figResult2_sup}).
 
 
 
 
 \begin{figure}
 \centering
-\includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult2_1-1.pdf}
-\caption{\label{fig:fig3_1} Comparison between the simple and extended pulse one true and inferred segment length and ALD decay estimates using a constant recombination rate and an empirical recombination map for simulations with a fixed mean time ($t_m$) of 1500 generations ago and varying durations ($t_d$) . A) mean time estimates of admixture B) Extended pulse estimate for admixture duration. Solid black line indicates true $t_m$ and $t_d$, black dotted line indicates expected inverse of the mean segment length under the extended pulse model, red dotted line indicates migration corrected admixture time ($t_m$(1-m)) }
+\includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult2_all_together-1.pdf}
+\caption{\label{fig:figResult2} Comparison between the simple and extended pulse one true and inferred segment length and ALD decay estimates using a constant recombination rate and an empirical recombination map (HapMap) for simulations with a fixed mean time ($t_m$) of 1500 generations ago and varying durations ($t_d$) . A) log likelihood ratios between the two models for segment data and standardized difference between the residual sum-of-squares between the two models for ALD data. B) Mean time estimates of admixture and extended pulse estimate for admixture duration. Solid black line indicates true $t_m$ and $t_d$, black dotted line indicates expected inverse of the mean segment length under the extended pulse model, red dotted line indicates migration corrected admixture time ($t_m$(1-m)). C) Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
 \end{figure}
 
 
-\begin{figure}
-\centering
-\includegraphics[width=16cm,height=18cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult2_2-1.pdf}
-\caption{\label{fig:fig3_2} Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
-\end{figure}
 
-\begin{figure}
-\centering
-\includegraphics[width=8cm,height=9cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult2_3-1.pdf}
-\caption{\label{fig:fig3_3} Comparison of the fit to data between the simple and extended pulse using true and estimated parameters. }
-\end{figure}
 
 \subsection{Comparing effect sizes for technical covariates}\label{comparing effect sizes}
 
@@ -517,7 +507,7 @@ admixture time estimates for a simple or extended admixture pulse are similarly 
 
 \begin{figure}
 \centering
-\includegraphics[width=8cm,height=16cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult_3-1.pdf}
+\includegraphics[width=8cm,height=16cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult_3_GLM_SP_and_EP_model_3-1.pdf}
 \caption{\label{fig:figGLM} GLM effect size estimates and 95\% C.I. for the parameters: gene flow model (simple/extended), recombination rate (constant/varying), demography (simple/complex), minimal genetic distance (0.02/0.05 cM), SNPs used for ALD calculation (100 \% / 5 \%) and ascertainment scheme (LES/HES), on the standardized difference between simulated and estimated admixture time. Estimates are calculated across all possible combinations of parameters and are given as the estimate of the standard model plus the respective parameter estimate. Dotted horizontal line indicates unbiased admixture estimates.}
 \end{figure}
 
